--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- CSS -->
+    <!-- Другие таблицы стилей -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- Мои таблицы стилей -->
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/navbar.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/header.css')}}">
@@ -15,7 +20,7 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/footer.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/about.css')}}">
     <link rel="shortcut icon" href="{{url_for('static', filename='img/school.png')}}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -70,22 +75,28 @@
         <div class="container">
             <br/><h1 style="text-align: center;">Новости школы</h1><br/>
             <div class="row">
+                {%for i in range(3)%}
                 <div class="col-lg-4">
-                    <div class="card_" style="width: 18rem;">
+                    <div class="card-news">
                         <div class="card-img">
-                            <img src="{{url_for('static', filename='img/news/точка роста/03.jpg')}}" class="card-img-top">
-                        </div> 
+                            <style>
+                                .card-img{
+                                    background-image: url("{{url_for('static', filename='img/news/точка роста/03.jpg')}}");
+                                }
+                            </style>
+                        </div>
                         <div class="card-body">
-                        <h5 class="card-title">Точка роста</h5>
-                        <p class="card-text">специальные образовательные центры, создаваемые на базе школ в селах и малых городах. Их открытие предусмотрено федеральным проектом ...</p>
-                        <a href="#" class="btn" style="background-color: rgb(68, 163, 68); color:white;">Подробнее</a>
+                            <h5 class="card-title text-center">Точка роста</h5>
+                            <p class="card-text">Cпециальные образовательные центры, создаваемые на базе школ в селах и малых городах. Их открытие предусмотрено федеральным проектом ...</p>
+                            <a href="#" class="btn btn-more">Подробнее</a>
                         </div>
                     </div>
                 </div>
-                <button type="button" class="btn" id="btn-news" onclick="location='/news'" style="color:white;">Все новости</button>
+                {%endfor%}
             </div>
+            <div class="fs-top"></div>
         </div>
-        
+
         <style>
             #news{
                 background-image: url("{{url_for('static',filename='img/news/точка роста/01.jpg')}}");
@@ -194,7 +205,10 @@
             </div>
         </div>
     </footer>
-
+        
+    <!-- Другие скрипты -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="{{url_for('static',filename='js/jquery-3.6.0.min.js')}}"></script>
+    <!-- Мои скрипты -->
 </body>
 </html>
