--- a/static/css/news.css
+++ b/static/css/news.css
@@ -7,28 +7,29 @@
     background-blend-mode: multiply;
 }
 
-#news-fs{
-    height: 100px;
-}
-
 #news h1,h2,h3,h4,h5,p{
     color:white;
 }
 
+
 #header-news{
+    text-align: center;
     padding-top: 70px;
     padding-bottom: 50px;
 }
+
 
 #header-news h1{
     display: block;
     width: 380px;
     margin: 0 auto;
-    transition: all 0.2s ease-out;
+    transition: all 0.2s ease-in-out;
 }
+
 #header-news h1:hover{
     text-shadow: 0px 0px 5px white;
 }
+
 
 .block-img{
     width: 330px;
