--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,19 +39,18 @@ table{
 
 .free-space{
     width: 100%;
-    height: 60px;
+    height: 70px;
 }
 
-.fs-top{
-    width: 100%;
-    height: 70px;
+.indent-header{
+    margin-bottom: 50px;
 }
 
 .text-white{color: #fff;}
 .text-black{color: black;}
 .text-center{text-align: center;}
 
-.transition{
+.transition-block{
     width: 100%;
     height: 10px;
     background-color: rgb(22, 22, 22);
