--- a/static/css/about.css
+++ b/static/css/about.css
@@ -23,11 +23,6 @@
     overflow: hidden;
 }
 
-.block-teachers{
-    display: flex;
-    /* justify-content: space-between; */
-}
-
 .card-body-teacher{
     width: 300px;
     height: 500px;
@@ -54,16 +49,13 @@
     border-radius: 10px;
 }
 
-.discribe-p{
-    width: 250px;
-    margin: 0 auto;
-}
-
 
 .discribe{
     width: inherit;
     padding-top: 20px;
     opacity: 0;
+    position: relative;
+    top:0;
 }
 
 .discribe-hover{
@@ -77,7 +69,8 @@
 }
 
 .discribe p{
-    /* padding-top: 10px; */
+    width: 250px;
+    margin: 0 auto;
     font-size: 0.9rem;
     margin-bottom: 0;
 }
@@ -86,16 +79,5 @@
     text-align: center;
     display: block;
     width: 200px;
-    margin: 0 auto;
-}
-
-.btn-scrol{
-    display: flex;
-    align-items: center;
-}
-
-input{
-    width: 40px;
-    height: 70px;
     margin: 0 auto;
 }
