--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,9 @@
     <!-- CSS -->
     <!-- Другие таблицы стилей -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
 
+    
     <!-- Мои таблицы стилей -->
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/navbar.css')}}">
@@ -20,13 +22,14 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/footer.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/about.css')}}">
     <link rel="shortcut icon" href="{{url_for('static', filename='img/school.png')}}">
-
+    
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-
+    
     <title>МБОУ СОШ №9</title>
+
 </head>
 
 <body>
@@ -40,7 +43,7 @@
             <li><a href="#contact">Контакты</a></li>
         </ul>
     </nav>
-
+    
     <header>
         <div class="container">
             <div class="header-content">
@@ -50,13 +53,13 @@
                 <button class="btn-main" style="color:white;" onclick="location.href = '#news'">Узнать больше</button>
             </div>
         </div>
-
+        
         <!-- <div class="overlay"></div> -->
     </header>
-
+    
     <section id="navigation-block">
         <div class="free-space"></div>
-
+        
         <div class="container">
             <div id="header-navigation">
                 <h1>Навигационный блок</h1>
@@ -76,7 +79,7 @@
                 {%endfor%}
             </div>
         </div>
-
+        
         <div class="free-space"></div>
     </section>
 
@@ -105,7 +108,7 @@
             </div>
             <div class="free-space"></div>
         </div>
-
+        
         <style>
             #news{
                 background-image: url("{{url_for('static',filename='img/news/точка роста/01.jpg')}}");
@@ -117,18 +120,34 @@
         <div class="container">
             <h1 id="header-about">Информация о нас</h1>
             <div class="panel">
-                <div>
-                    <img src="{{url_for('static', filename='img/teachers/01.jpg')}}">
-                    <div class="discribe">
-                        <h1>Lorem, ipsum dolor.</h1>
-                        <div class="line"></div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem aut ratione porro quos doloribus in, numquam laborum provident autem! Esse asperiores dolorum omnis quam, amet eum praesentium quaerat nesciunt dolore. Illum porro iure assumenda esse reiciendis.</p>
+                <div class="sc swiper-container">
+                    <div class="swiper-wrapper">
+                        {%for i in range(6)%}
+                        <div class="swiper-slider">
+                            <div class="photo-teacher">
+                                <style>
+                                    .photo-teacher{
+                                        background-image: url("{{url_for('static', filename='img/teachers/01.jpg')}}");
+                                    }
+                                </style>
+                                <div class="overlay">
+                                    <div class="discribe">
+                                        <h5>Lorem, ipsum dolor.</h5>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem aut ratione porro quos doloribus in, numquam laborum provident autem! Esse asperiores dolorum omnis quam, amet eum praesentium quaerat nesciunt dolore. Illum porro iure assumenda esse reiciendis.</p>
+                                        <a href="">Подробнее</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        {%endfor%}
                     </div>
                 </div>
+                <div class="swiper-butto-prev"></div>
+                <div class="swiper-butto-next"></div>
             </div>
         </div>
     </section>
-
+    
     <section id="contact">
         <div class="container">
             <h1 style="text-align: center; padding:20px 0;">Контакты</h1>
@@ -145,10 +164,10 @@
                     <p>Адрес: Саха (Якутия) Республика Алдан г Солнечный мкр, Молодежная ул, д.10</p>
                     <p>Номер: +7 (41145) 3-86-40</p>
                     <p>Время работы: пн-сб 08:00–18:00<p>
-                    <p>E-mail: mbousosh9galdan@rambler.ru</p>
+                        <p>E-mail: mbousosh9galdan@rambler.ru</p>
                     <p>Директор: Шитикова Людмила Юрьевна</p>
                     <p>Почтовый индекс: 678906</p>
-                    </div>
+                </div>
                     <div id="social" style="margin-left: 20px;">
                         <h5>Мы с социальных сетях</h5>
                         <a href="https://vk.com/share.php?url=https%3A%2F%2Fschool-9.saha.eduru.ru%2Fkontakti&title=%D0%A1%D1%80%D0%B5%D0%B4%D0%BD%D1%8F%D1%8F%20%D0%BE%D0%B1%D1%89%D0%B5%D0%BE%D0%B1%D1%80%D0%B0%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F%20%D1%88%D0%BA%D0%BE%D0%BB%D0%B0%20%E2%84%96%209%20%7C%20%D0%9A%D0%BE%D0%BD%D1%82%D0%B0%D0%BA%D1%82%D1%8B&utm_source=share2"><img src="{{url_for('static', filename='img/icons/vk.png')}}"></a>
@@ -160,7 +179,7 @@
             </div>
         </div>
     </section>
-
+    
     <footer>
         <div class="container">
             <div class="footer-content">
@@ -168,10 +187,14 @@
             </div>
         </div>
     </footer>
-        
+    
     <!-- Другие скрипты -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="{{url_for('static',filename='js/jquery-3.6.0.min.js')}}"></script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
     <!-- Мои скрипты -->
+    <script src="{{url_for('static',filename='js/about.js')}}"></script>
+    <script src="{{url_for('static',filename='js/slider.js')}}"></script>
 </body>
 </html>
