--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <!-- CSS -->
     <!-- Другие таблицы стилей -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="{{url_for('static',filename='css/swiper/swiper-bundle.css')}}"/>
 
     
     <!-- Мои таблицы стилей -->
@@ -120,11 +120,12 @@
         <div class="container">
             <h1 id="header-about">Информация о нас</h1>
             <div class="panel">
-                <div class="sc swiper-container">
+                <div class="swiper-container">
                     <div class="swiper-wrapper">
                         {%for i in range(6)%}
                         <div class="swiper-slider">
-                            <div class="photo-teacher">
+                            <img src="">
+                            <!-- <div class="photo-teacher">
                                 <style>
                                     .photo-teacher{
                                         background-image: url("{{url_for('static', filename='img/teachers/01.jpg')}}");
@@ -137,13 +138,13 @@
                                         <a href="">Подробнее</a>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         {%endfor%}
                     </div>
                 </div>
-                <div class="swiper-butto-prev"></div>
-                <div class="swiper-butto-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
         </div>
     </section>
@@ -189,9 +190,9 @@
     </footer>
     
     <!-- Другие скрипты -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="{{url_for('static',filename='js/jquery-3.6.0.min.js')}}"></script>
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <!-- Bootstrap --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
+    <!-- jQuery --><script src="{{url_for('static',filename='js/jquery-3.6.0.min.js')}}"></script> -->
+    <!-- Swiper --><script src="{{url_for('static',filename='js/swiper/swiper-bundle.js')}}"></script> -->
 
     <!-- Мои скрипты -->
     <script src="{{url_for('static',filename='js/about.js')}}"></script>
