--- a/templates/test.html
+++ b/templates/test.html
@@ -5,42 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
-
+ 
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <div class="swiper-c swiper-container">
-            <div class="swiper-w swiper-wrapper">
-                
-                <div class="swiper-s swiper-slide">
-                    <div class="block-image">
-                        <!-- <img src="{{url_for('static', filename='1.jpg')}}"> -->
-                        <img src="../static/1.jpg">
-                    </div>
+    <style>
+        .swiper {
+            width: 600px;
+            height: 300px;
+          }
+    </style>
+    <div class="swiper">
+        <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+                <div>
+                    <img src="../static/1.jpg">
                 </div>
-                
-                <div class="ss swiper-slide">
-                    <div class="block-image">
-                        <!-- <img src="{{url_for('static', filename='1.jpg')}}"> -->
-                        <img src="../static/1.jpg">
-                    </div>
-                </div>
-                
-                <div class="ss swiper-slide">
-                    <div class="block-image">
-                        <!-- <img src="{{url_for('static', filename='1.jpg')}}"> -->
-                        <img src="../static/1.jpg">
-                    </div>
-                </div>
-                
             </div>
+            <div class="swiper-slide">
+                <div>
+                    <img src="../static/1.jpg">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div>
+                    <img src="../static/1.jpg">
+                </div>
+            </div>
+            ...
         </div>
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+        
+        <!-- If we need navigation buttons -->
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
     </div>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <!-- <script src="{{url_for('static', filename='js/slider.js')}}"></script> -->
-    <script src="../static/js/slider.js"></script>
+    <script src="slider.js"></script>
 </body>
 </html>
