--- a/static/css/about.css
+++ b/static/css/about.css
@@ -15,13 +15,22 @@
     color: white;
 }
 
-.panel{
+.swiper{
     min-height: 400px;
     background-color: rgba(36, 36, 36, 0.397);
     backdrop-filter: blur(8px);
     border-radius: 5px;
     overflow: hidden;
 }
+
+.swiper-button-prev, .swiper-button-next::after{
+    color: white;
+}
+
+/* .swiper {
+    width: 600px;
+    height: 300px;
+  } */
 
 .card-body-teacher{
     width: 300px;
@@ -31,7 +40,7 @@
 .photo-teacher{
     width: 300px;
     height: 400px;
-    margin: 50px 0;
+    margin: 50px auto;
     background-size: cover;
     border-radius: 10px;
 }
