--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,7 @@
                         <div class="overlay">
                             <div class="discribe">
                                 <h5>{{data['data_t'][i][0]}}</h5>
-                                <p>{{data['data_t'][i][1]}}</p>
+                                <p>{{data['data_t'][i][1][:200]|capitalize}}...</p>
                                 <a href="">Подробнее</a>
                             </div>
                         </div>
